update: rotas do render e seguranca firebase

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,43 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    
+    <title>Prospector AI | Inteligência em Vendas B2B</title>
+    <meta name="description" content="Mineração de leads e análise de branding com Inteligência Artificial" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Montserrat:ital,wght@0,700;0,900;1,700;1,900&display=swap" rel="stylesheet" />
+
+    <style>
+      /* Reset básico para evitar o 'pulo' de layout antes do CSS carregar */
+      body {
+        margin: 0;
+        background-color: #020617; /* Cor do seu background (slate-950) */
+        color: #f1f5f9;
+        font-family: 'Inter', sans-serif;
+        overflow-x: hidden;
+      }
+
+      /* Scrollbar Personalizada para combinar com o tema Dark */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #0f172a;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #334155;
+        border-radius: 10px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #475569;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
