feat: botão do crm na pagina inicial

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Prospector AI | Inteligência em Vendas B2B</title>
+    <title>Prospector AI | Inteligência</title>
     <meta name="description" content="Mineração de leads e análise de branding com Inteligência Artificial" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
